--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "webpack-cli": "~2.0.11"
   },
   "dependencies": {
-    "jquery": "~2.1.1",
     "d3-force": "~1.1.0",
-    "event-emitter": "~0.3.5"
+    "event-emitter": "~0.3.5",
+    "jquery": "~3.3.1",
+    "lodash": "~4.17.11"
   },
   "keywords": [
     "节点式编程，数据图，流程图，连通图"
