--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "butterfly-dag",
-  "version": "2.1.23",
+  "version": "2.1.27",
   "description": "一个基于数据驱动的节点式编排组件库，让你有方便快捷定制可视化流程图表",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "webpack && npm publish"
   },
   "repository": {
     "type": "git",
