--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "webpack && npm publish"
+    "release": "webpack && npm publish",
+    "compile": "./node_modules/webpack/bin/webpack.js"
   },
   "repository": {
     "type": "git",
