--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "d3-force": "~1.1.0",
-    "dom-to-image": "^2.6.0",
+    "dom-to-image": "~2.6.0",
     "event-emitter": "~0.3.5",
     "jquery": "~3.3.1",
     "lodash": "~4.17.11"
