--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "butterfly-dag",
   "version": "2.3.11",
   "description": "一个基于数据驱动的节点式编排组件库，让你有方便快捷定制可视化流程图表",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "webpack && npm publish",
@@ -35,9 +35,7 @@
     "d3-force": "~1.1.0",
     "dom-to-image": "~2.6.0",
     "event-emitter": "~0.3.5",
-    "g": "^2.0.1",
     "jquery": "~3.3.1",
-    "link": "^0.1.5",
     "lodash": "~4.17.11"
   },
   "keywords": [
