--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "webpack && npm publish",
-    "compile": "./node_modules/webpack/bin/webpack.js",
-    "start": "cd dev && npx honeypack start"
+    "compile": "./node_modules/webpack/bin/webpack.js"
   },
   "repository": {
     "type": "git",
