--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,5 @@ steps:
 
 - script: |
     npm install
-    rollup -c
+    ./node_modules/rollup/dist/bin/rollup -c
   displayName: 'npm install and build'
