--- a/example/package.json
+++ b/example/package.json
@@ -19,30 +19,30 @@
     "react-router-dom": "~5.1.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^7.1.5",
+    "babel-core": "~6.26.3",
+    "babel-loader": "~7.1.5",
     "babel-plugin-add-module-exports": "~1.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-class-properties": "~6.24.1",
+    "babel-plugin-transform-decorators-legacy": "~1.3.5",
+    "babel-plugin-transform-object-rest-spread": "~6.26.0",
     "babel-plugin-transform-runtime": "~6.23.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-polyfill": "~6.26.0",
+    "babel-preset-env": "~1.7.0",
     "babel-preset-es2015-node5": "~1.2.0",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-aliyun": "^2.0.3",
-    "eslint-plugin-react": "^7.13.0",
+    "babel-preset-react": "~6.24.1",
+    "css-loader": "~1.0.0",
+    "eslint": "~5.16.0",
+    "eslint-config-aliyun": "~2.0.3",
+    "eslint-plugin-react": "~7.13.0",
     "file-loader": "~2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "less": "^3.7.0",
-    "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.10.1"
+    "less": "~3.7.0",
+    "less-loader": "~4.1.0",
+    "mini-css-extract-plugin": "~0.9.0",
+    "style-loader": "~0.21.0",
+    "url-loader": "~1.0.1",
+    "webpack": "~4.41.5",
+    "webpack-cli": "~3.0.8",
+    "webpack-dev-server": "~3.10.1"
   }
 }
