--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butterfly-dag",
-  "version": "2.5.9",
+  "version": "2.5.10",
   "description": "一个基于数据驱动的节点式编排组件库，让你有方便快捷定制可视化流程图表",
   "main": "dist/index.js",
   "module": "es/index.js",
@@ -31,7 +31,8 @@
   },
   "peerDependencies": {
     "jquery": ">=2.0.0",
-    "lodash": ">=4.0.0"
+    "lodash": ">=4.0.0",
+    "bravo-editor": "~1.0.22"
   },
   "dependencies": {
     "d3-force": "~2.0.1",
