--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
   "name": "butterfly-dag",
-  "version": "2.5.10",
+  "version": "2.6.1",
   "description": "一个基于数据驱动的节点式编排组件库，让你有方便快捷定制可视化流程图表",
   "main": "dist/index.js",
   "module": "es/index.js",
+  "pack": "pack/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "webpack && echo \"Error: no test specified\" && exit 1",
     "release": "rollup -c && npm publish",
     "compile": "./node_modules/webpack/bin/webpack.js",
-    "build": "rollup -c && cp -r static ./es/ && cp -r static ./dist"
+    "build": "webpack && rollup -c && cp -r static ./es/ && cp -r static ./dist"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/alibaba/butterfly.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "less": "^3.7.0",
+    "@babel/core": "~7.8.3",
+    "@babel/plugin-proposal-class-properties": "~7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "~7.8.3",
+    "@babel/preset-env": "~7.8.3",
+    "@babel/preset-react": "~7.8.3",
+    "babel-loader": "8.0.6",
+    "css-loader": "~3.4.2",
+    "less": "~3.11.1",
+    "less-loader": "~5.0.0",
     "rollup": "~1.29.0",
     "rollup-plugin-babel": "~4.3.3",
     "rollup-plugin-commonjs": "~10.1.0",
@@ -27,12 +32,15 @@
     "rollup-plugin-json": "~4.0.0",
     "rollup-plugin-peer-deps-external": "~2.2.0",
     "rollup-plugin-postcss": "~2.0.3",
-    "rollup-plugin-url": "~3.0.1"
+    "rollup-plugin-url": "~3.0.1",
+    "style-loader": "~1.1.3",
+    "url-loader": "~3.0.0",
+    "webpack": "~4.41.6",
+    "webpack-cli": "~3.3.11"
   },
   "peerDependencies": {
     "jquery": ">=2.0.0",
-    "lodash": ">=4.0.0",
-    "bravo-editor": "~1.0.22"
+    "lodash": ">=4.0.0"
   },
   "dependencies": {
     "d3-force": "~2.0.1",
