--- a/example/package.json
+++ b/example/package.json
@@ -19,17 +19,13 @@
     "react-router-dom": "~5.1.2"
   },
   "devDependencies": {
-    "babel-core": "~6.26.3",
-    "babel-loader": "~7.1.5",
-    "babel-plugin-add-module-exports": "~1.0.0",
-    "babel-plugin-transform-class-properties": "~6.24.1",
-    "babel-plugin-transform-decorators-legacy": "~1.3.5",
-    "babel-plugin-transform-object-rest-spread": "~6.26.0",
-    "babel-plugin-transform-runtime": "~6.23.0",
-    "babel-polyfill": "~6.26.0",
-    "babel-preset-env": "~1.7.0",
-    "babel-preset-es2015-node5": "~1.2.0",
-    "babel-preset-react": "~6.24.1",
+    "@babel/core": "~7.8.3",
+    "@babel/plugin-proposal-class-properties": "~7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "~7.8.3",
+    "@babel/preset-env": "~7.8.3",
+    "@babel/preset-react": "~7.8.3",
+    "babel-loader": "8.0.6",
+    "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
     "css-loader": "~1.0.0",
     "eslint": "~5.16.0",
     "eslint-config-aliyun": "~2.0.3",
