--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butterfly-dag",
-  "version": "2.6.3",
+  "version": "2.6.4",
   "description": "一个基于数据驱动的节点式编排组件库，让你有方便快捷定制可视化流程图表",
   "main": "dist/index.js",
   "module": "es/index.js",
@@ -22,6 +22,7 @@
     "@babel/preset-env": "~7.8.3",
     "@babel/preset-react": "~7.8.3",
     "babel-loader": "8.0.6",
+    "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
     "css-loader": "~3.4.2",
     "less": "~3.11.1",
     "less-loader": "~5.0.0",
