--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lodash": ">=4.0.0"
   },
   "dependencies": {
+    "@antv/hierarchy": "~0.6.2",
     "d3-force": "~2.0.1",
     "dom-to-image": "~2.6.0",
     "event-emitter": "~0.3.5"
