--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "less": "~3.11.1",
     "less-loader": "~5.0.0",
     "lodash": "^4.17.15",
+    "mini-css-extract-plugin": "^0.9.0",
     "rollup": "~2.1.0",
     "rollup-plugin-babel": "~4.4.0",
     "rollup-plugin-commonjs": "~10.1.0",
