--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@antv/hierarchy": "~0.6.2",
     "d3-force": "~2.0.1",
+    "dagre": "~0.8.5",
     "dom-to-image": "~2.6.0",
     "eventemitter3": "4.0.0"
   },
