--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "babel-loader": "8.1.0",
     "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
     "css-loader": "~3.5.3",
-    "jquery": "^3.5.0",
+    "jquery": "~3.5.1",
     "less": "~3.11.1",
     "less-loader": "~6.1.0",
-    "lodash": "^4.17.15",
+    "lodash": "~4.17.19",
     "mini-css-extract-plugin": "^0.9.0",
     "rollup": "~2.1.0",
     "rollup-plugin-babel": "~4.4.0",
