--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butterfly-dag",
-  "version": "2.8.37",
+  "version": "2.8.39",
   "description": "一个基于数据驱动的节点式编排组件库，让你有方便快捷定制可视化流程图表",
   "main": "dist/index.js",
   "es": "es/index.js",
@@ -23,12 +23,12 @@
     "@babel/preset-react": "~7.10.1",
     "babel-loader": "8.1.0",
     "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
-    "css-loader": "~3.5.3",
+    "css-loader": "~4.3.0",
     "jquery": "~3.5.1",
     "less": "~3.12.2",
-    "less-loader": "~6.2.0",
+    "less-loader": "~7.0.2",
     "lodash": "~4.17.19",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "~1.0.0",
     "rollup": "~2.1.0",
     "rollup-plugin-babel": "~4.4.0",
     "rollup-plugin-commonjs": "~10.1.0",
@@ -37,10 +37,10 @@
     "rollup-plugin-peer-deps-external": "~2.2.0",
     "rollup-plugin-postcss": "~3.1.1",
     "rollup-plugin-url": "~3.0.1",
-    "style-loader": "~1.2.0",
+    "style-loader": "~2.0.0",
     "url-loader": "~4.1.0",
-    "webpack": "~4.44.1",
-    "webpack-cli": "~3.3.11"
+    "webpack": "~5.0.0",
+    "webpack-cli": "~4.0.0"
   },
   "peerDependencies": {
     "jquery": ">=2.0.0",
