--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butterfly-dag",
-  "version": "2.8.39",
+  "version": "2.8.43",
   "description": "一个基于数据驱动的节点式编排组件库，让你有方便快捷定制可视化流程图表",
   "main": "dist/index.js",
   "es": "es/index.js",
@@ -16,18 +16,18 @@
     "url": "git+ssh://git@github.com/alibaba/butterfly.git"
   },
   "devDependencies": {
-    "@babel/core": "~7.11.0",
-    "@babel/plugin-proposal-class-properties": "~7.10.1",
-    "@babel/plugin-proposal-object-rest-spread": "~7.11.0",
-    "@babel/preset-env": "~7.11.0",
-    "@babel/preset-react": "~7.10.1",
+    "@babel/core": "~7.12.0",
+    "@babel/plugin-proposal-class-properties": "~7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "~7.12.0",
+    "@babel/preset-env": "~7.12.0",
+    "@babel/preset-react": "~7.12.1",
     "babel-loader": "8.1.0",
     "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
     "css-loader": "~4.3.0",
-    "jquery": "~3.5.1",
+    "jquery": "^3.5.1",
     "less": "~3.12.2",
     "less-loader": "~7.0.2",
-    "lodash": "~4.17.19",
+    "lodash": "^4.17.20",
     "mini-css-extract-plugin": "~1.0.0",
     "rollup": "~2.1.0",
     "rollup-plugin-babel": "~4.4.0",
@@ -39,7 +39,7 @@
     "rollup-plugin-url": "~3.0.1",
     "style-loader": "~2.0.0",
     "url-loader": "~4.1.0",
-    "webpack": "~5.0.0",
+    "webpack": "~5.1.0",
     "webpack-cli": "~4.0.0"
   },
   "peerDependencies": {
