--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/core": "~7.12.0",
     "@babel/plugin-proposal-class-properties": "~7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "~7.12.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "~7.12.0",
     "@babel/preset-react": "~7.12.1",
     "babel-loader": "8.1.0",
