--- a/example/package.json
+++ b/example/package.json
@@ -24,6 +24,7 @@
     "@babel/plugin-proposal-object-rest-spread": "~7.8.3",
     "@babel/preset-env": "~7.8.3",
     "@babel/preset-react": "~7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
     "css-loader": "~1.0.0",
