--- a/react/example/package.json
+++ b/react/example/package.json
@@ -11,14 +11,12 @@
     "lodash": "*",
     "jquery": "*"
   },
-  "eslintConfig": {
-    "extends": "aliyun"
-  },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@vitejs/plugin-react-refresh": "^1.1.0",
-    "vite": "^2.0.0-beta.12",
-    "less": "^4.1.0"
+    "less": "^4.1.0",
+    "react-dev-utils": "^11.0.1",
+    "vite": "^2.0.0-beta.12"
   },
   "files": [
     "dist",
@@ -27,12 +25,16 @@
   "dependencies": {
     "@ant-design/icons": "^4.4.0",
     "antd": "^4.11.2",
-    "butterfly-dag": "^2.8.31",
+    "butterfly-dag": "^3.1.6",
+    "debug": "^4.3.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "prop-types": "^15.5.4",
+    "punycode": "^2.1.1",
+    "querystring": "^0.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "url": "^0.11.0"
   }
 }
