fix: 修复锚点渲染的问题

--- a/react/package.json
+++ b/react/package.json
@@ -9,7 +9,7 @@
   "jsnext:main": "dist/index.es.js",
   "scripts": {
     "build": "rollup -c ./rollup.config.js",
-    "eslint": "eslint --ext .js --ext .jsx --ignore-path ../.gitignore ."
+    "eslint": "eslint --ext .js --ext .jsx --ignore-path .eslintignore ."
   },
   "eslintConfig": {
     "extends": "aliyun"
