--- a/react/package.json
+++ b/react/package.json
@@ -8,6 +8,7 @@
   "unpkg": "dist/index.unpkg.js",
   "jsnext:main": "dist/index.es.js",
   "scripts": {
+    "start": "cd example && npm run dev",
     "build": "rollup -c ./rollup.config.js",
     "eslint": "eslint --ext .js --ext .jsx --ignore-path .eslintignore ."
   },
