--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "es": "es/index.js",
   "pack": "pack/index.js",
   "scripts": {
-    "test": "webpack && echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require ./test/window.js ./test/*.test.js",
     "release": "rollup -c && npm publish",
+    "coverage": "nyc npm run test",
     "compile": "./node_modules/webpack/bin/webpack.js",
     "build": "webpack && rollup -c && cp -r static ./es/ && cp -r static ./dist"
   },
@@ -21,16 +22,22 @@
     "@babel/plugin-proposal-object-rest-spread": "~7.12.0",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "~7.12.0",
+    "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "~7.12.1",
+    "@babel/register": "^7.12.13",
     "babel-loader": "~8.2.0",
     "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
+    "canvas": "^2.6.1",
     "css-loader": "~5.0.0",
+    "ignore-styles": "^5.0.1",
     "jquery": "^3.5.1",
+    "jsdom": "^16.4.0",
     "less": "~3.12.2",
     "less-loader": "~7.1.0",
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "~1.3.2",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "rollup": "~2.34.2",
     "rollup-plugin-babel": "~4.4.0",
     "rollup-plugin-commonjs": "~10.1.0",
