test: circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,5 +35,5 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      # run compile
-      - run: npm run build
+      # run compile & test
+      - run: npm run build & npm run test
