--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,9 @@
   "author": "jambin",
   "license": "MIT",
   "dependencies": {
+    "@alipay/gravity-demo-sdk": "^4.1.0",
     "antd": "~3.26.7",
+    "axios": "^0.21.1",
     "butterfly-dag": "*",
     "jquery": "^3.4.1",
     "react": "~16.12.0",
@@ -34,6 +36,7 @@
     "eslint-config-aliyun": "~2.0.3",
     "eslint-plugin-react": "~7.13.0",
     "file-loader": "~2.0.0",
+    "fs-extra": "^9.1.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "~3.7.0",
     "less-loader": "~4.1.0",
