--- a/example/package.json
+++ b/example/package.json
@@ -5,18 +5,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "eslint": "eslint . --fix"
+  },
+  "eslintConfig": {
+    "extends": "aliyun"
   },
   "author": "jambin",
   "license": "MIT",
   "dependencies": {
-    "@alipay/gravity-demo-sdk": "^4.1.0",
+    "@stackblitz/sdk": "^1.5.2",
     "antd": "~3.26.7",
     "axios": "^0.21.1",
     "butterfly-dag": "*",
     "jquery": "^3.4.1",
     "react": "~16.12.0",
+    "react-ace": "^9.3.0",
     "react-dom": "~16.12.0",
+    "react-hot-keys": "^2.6.2",
     "react-router": "~5.1.2",
     "react-router-dom": "~5.1.2"
   },
@@ -28,13 +34,14 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "~7.8.3",
     "@babel/preset-react": "~7.8.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
     "css-loader": "~1.0.0",
     "dagre": "~0.8.5",
-    "eslint": "~5.16.0",
-    "eslint-config-aliyun": "~2.0.3",
-    "eslint-plugin-react": "~7.13.0",
+    "eslint": "^5.16.0",
+    "eslint-config-aliyun": "^2.0.3",
+    "eslint-plugin-react": "^7.13.0",
     "file-loader": "~2.0.0",
     "fs-extra": "^9.1.0",
     "html-webpack-plugin": "^3.2.0",
