--- a/example/package.json
+++ b/example/package.json
@@ -18,7 +18,9 @@
     "antd": "~3.26.7",
     "axios": "^0.21.1",
     "butterfly-dag": "*",
+    "download.js": "^1.0.0",
     "jquery": "^3.4.1",
+    "jszip": "^3.6.0",
     "react": "~16.12.0",
     "react-ace": "^9.3.0",
     "react-dom": "~16.12.0",
@@ -31,6 +33,7 @@
     "@babel/core": "~7.8.3",
     "@babel/plugin-proposal-class-properties": "~7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "~7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "~7.8.3",
     "@babel/preset-react": "~7.8.3",
