doc(demo): 添加demo的文档描述

--- a/example/demo/analysis/package.json
+++ b/example/demo/analysis/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "analysis",
-  "cn_name": "分析模板",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "name": "sql analysis",
+  "cn_name": "SQL分析模板",
+  "description": "a sql analysis dag, to show the relation between sql",
+  "cn_description": "用图形表示不同SQL之间，变量的分析模板",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
