--- a/example/demo/concent-layout/package.json
+++ b/example/demo/concent-layout/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "compact-box-tree",
-  "cn_name": "分析模板",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "name": "concent-layout",
+  "cn_name": "中心布局",
+  "description": "a dag which is layout by concent layout",
+  "cn_description": "使用中心布局的DAG图",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
