--- a/example/demo/drageLayout/package.json
+++ b/example/demo/drageLayout/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "decision",
-  "cn_name": "决策树",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "name": "dagre-layout",
+  "cn_name": "dagre布局",
+  "description": "a demo to show how to use dagre layout",
+  "cn_description": "dagre布局示例",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
