--- a/example/demo/flow/package.json
+++ b/example/demo/flow/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "decision",
-  "cn_name": "决策树",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "name": "flow",
+  "cn_name": "流程图",
+  "description": "a dag to display a flow",
+  "cn_description": "用于展示流程的DAG图",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
