--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
-    "eslint": "eslint . --fix"
+    "eslint": "eslint . --fix",
+    "build": "NODE_ENV=production webpack"
   },
   "eslintConfig": {
     "extends": "aliyun"
