--- a/example/demo/force/package.json
+++ b/example/demo/force/package.json
@@ -1,8 +1,8 @@
 {
   "name": "force",
-  "cn_name": "分析模板",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "cn_name": "forceLayout布局",
+  "description": "a dag to display forceLayout",
+  "cn_description": "用于展示forceLayout布局的DAG图",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
