--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,7 @@
     "antd": "~3.26.7",
     "axios": "^0.21.1",
     "butterfly-dag": "*",
+    "butterfly-react": "^0.0.6",
     "download.js": "^1.0.0",
     "i18next": "^19.8.7",
     "i18next-browser-languagedetector": "^6.0.1",
@@ -54,6 +55,7 @@
     "less": "~3.7.0",
     "less-loader": "~4.1.0",
     "mini-css-extract-plugin": "~0.9.0",
+    "prop-types": "^15.7.2",
     "style-loader": "~0.21.0",
     "style-resources-loader": "^1.4.1",
     "url-loader": "~1.0.1",
