add some description

--- a/example/demo/fruchterman/package.json
+++ b/example/demo/fruchterman/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fruchterman",
-  "cn_name": "分析模板",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "cn_name": "fruchterman布局",
+  "description": "a dag to display Layout of fruchterman",
+  "cn_description": "用于展示fruchterman布局的DAG图",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
