--- a/example/demo/grid/package.json
+++ b/example/demo/grid/package.json
@@ -1,8 +1,8 @@
 {
   "name": "grid",
-  "cn_name": "分析模板",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "cn_name": "grid布局",
+  "description": "a dag to display Layout of grid",
+  "cn_description": "用于展示grid布局的DAG图",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
