--- a/example/demo/relationalBooks/package.json
+++ b/example/demo/relationalBooks/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "relational_books",
-  "cn_name": "分析模板",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "name": "relational-books",
+  "cn_name": "书本关系图",
+  "description": "a dag to show to how to make a relational diagram of Book",
+  "cn_description": "一个书本关系图",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
