--- a/example/demo/system/package.json
+++ b/example/demo/system/package.json
@@ -1,8 +1,8 @@
 {
   "name": "system",
-  "cn_name": "分析模板",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "cn_name": "系统数据流图",
+  "description": "a dag to show system data flow",
+  "cn_description": "用于描述系统数据流的DAG图",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
