--- a/example/demo/industry/package.json
+++ b/example/demo/industry/package.json
@@ -1,8 +1,8 @@
 {
   "name": "industry",
-  "cn_name": "分析模板",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "cn_name": "工业制作顺序图",
+  "description": "a dag to show to how to make a industrial production sequence diagram",
+  "cn_description": "一个工业制作顺序图",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
