--- a/example/demo/login/package.json
+++ b/example/demo/login/package.json
@@ -1,8 +1,8 @@
 {
   "name": "login",
-  "cn_name": "分析模板",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "cn_name": "登录流程图",
+  "description": "a dag to show to how to make a Login sequence diagram",
+  "cn_description": "一个登录顺序流程图",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
