--- a/example/demo/policy/package.json
+++ b/example/demo/policy/package.json
@@ -1,8 +1,8 @@
 {
   "name": "policy",
-  "cn_name": "分析模板",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "cn_name": "政策顺序图",
+  "description": "a dag to show to how to make a Policy sequence diagram",
+  "cn_description": "一个政策顺序图",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
