--- a/example/demo/radial/package.json
+++ b/example/demo/radial/package.json
@@ -1,8 +1,8 @@
 {
   "name": "radial",
-  "cn_name": "分析模板",
-  "description": "英文描述",
-  "cn_description": "中文描述",
+  "cn_name": "radial布局",
+  "description": "a dag to display Layout of radial",
+  "cn_description": "用于展示radial布局的DAG图",
   "dependencies": {
     "butterfly-dag": "*",
     "react": "^16.0.0",
