--- a/react/package.json
+++ b/react/package.json
@@ -47,6 +47,7 @@
     "debug": "^4.3.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
+    "postcss": "^8.2.6",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0"
   }
