--- a/example/package.json
+++ b/example/package.json
@@ -10,39 +10,39 @@
   "author": "jambin",
   "license": "MIT",
   "dependencies": {
-    "antd": "~3.26.7",
-    "butterfly-dag": "*",
-    "jquery": "^3.4.1",
-    "react": "~16.12.0",
-    "react-dom": "~16.12.0",
-    "react-router": "~5.1.2",
-    "react-router-dom": "~5.1.2"
+    "antd": "^3.26.20",
+    "butterfly-dag": "^3.1.13",
+    "jquery": "^3.5.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
-    "@antv/hierarchy": "~0.6.4",
-    "@babel/core": "~7.8.3",
-    "@babel/plugin-proposal-class-properties": "~7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "~7.8.3",
+    "@antv/hierarchy": "^0.6.6",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "~7.8.3",
-    "@babel/preset-react": "~7.8.3",
-    "babel-loader": "8.0.6",
-    "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
-    "css-loader": "~1.0.0",
-    "dagre": "~0.8.5",
-    "eslint": "~5.16.0",
-    "eslint-config-aliyun": "~2.0.3",
-    "eslint-plugin-react": "~7.13.0",
-    "file-loader": "~2.0.0",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "css-loader": "^1.0.1",
+    "dagre": "^0.8.5",
+    "eslint": "^5.16.0",
+    "eslint-config-aliyun": "^2.0.3",
+    "eslint-plugin-react": "^7.13.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "less": "~3.7.0",
-    "less-loader": "~4.1.0",
-    "mini-css-extract-plugin": "~0.9.0",
-    "style-loader": "~0.21.0",
+    "less": "^3.7.1",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "style-loader": "^0.21.0",
     "style-resources-loader": "^1.4.1",
-    "url-loader": "~1.0.1",
-    "webpack": "~4.41.5",
-    "webpack-cli": "~3.0.8",
-    "webpack-dev-server": "~3.10.1"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.10.3"
   }
 }
