--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butterfly-dag",
-  "version": "3.1.17",
+  "version": "3.1.18",
   "description": "一个基于数据驱动的节点式编排组件库，让你有方便快捷定制可视化流程图表",
   "main": "dist/index.js",
   "es": "es/index.js",
@@ -17,28 +17,28 @@
     "url": "git+ssh://git@github.com/alibaba/butterfly.git"
   },
   "devDependencies": {
-    "@babel/core": "~7.12.0",
-    "@babel/plugin-proposal-class-properties": "~7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "~7.12.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.13",
-    "@babel/preset-react": "~7.12.1",
-    "@babel/register": "^7.12.13",
+    "@babel/core": "~7.13.0",
+    "@babel/plugin-proposal-class-properties": "~7.13.0",
+    "@babel/plugin-proposal-object-rest-spread": "~7.13.0",
+    "@babel/plugin-transform-modules-commonjs": "~7.13.0",
+    "@babel/plugin-transform-runtime": "~7.13.0",
+    "@babel/preset-env": "~7.13.0",
+    "@babel/preset-react": "~7.12.13",
+    "@babel/register": "~7.13.0",
     "babel-loader": "~8.2.0",
     "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
     "canvas": "^2.6.1",
-    "css-loader": "~5.0.0",
+    "css-loader": "~5.1.0",
     "ignore-styles": "^5.0.1",
     "jquery": "^3.5.1",
     "jsdom": "^16.4.0",
-    "less": "~3.12.2",
-    "less-loader": "~7.1.0",
+    "less": "~4.1.1",
+    "less-loader": "~8.0.0",
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "~1.3.2",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
-    "rollup": "~2.34.2",
+    "rollup": "~2.39.1",
     "rollup-plugin-babel": "~4.4.0",
     "rollup-plugin-commonjs": "~10.1.0",
     "rollup-plugin-extensions": "~0.1.0",
@@ -48,8 +48,8 @@
     "rollup-plugin-url": "~3.0.1",
     "style-loader": "~2.0.0",
     "url-loader": "~4.1.0",
-    "webpack": "~5.10.0",
-    "webpack-cli": "~4.2.0"
+    "webpack": "~5.24.2",
+    "webpack-cli": "~4.5.0"
   },
   "peerDependencies": {
     "jquery": ">=2.0.0",
