--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butterfly-react",
-  "version": "0.0.23-beta",
+  "version": "0.0.24-beta",
   "description": "react version for butterfly",
   "license": "MIT",
   "main": "dist/index.js",
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "cd example && npm run dev",
     "build": "rollup -c ./rollup.config.js",
-    "eslint": "eslint --ext .js --ext .jsx --ignore-path .eslintignore ."
+    "eslint": "eslint --ext .js --ext .jsx --ignore-path .eslintignore .",
+    "prepublishOnly": "npm run build"
   },
   "eslintConfig": {
     "extends": "aliyun"
