fix: 修复React无法展示的问题

--- a/example/demo/react/package.json
+++ b/example/demo/react/package.json
@@ -10,6 +10,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "jquery": "*",
-    "lodash": "*"
+    "lodash": "*",
+    "antd": "*"
   }
 }
