--- a/plugins/panel/package.json
+++ b/plugins/panel/package.json
@@ -14,7 +14,7 @@
   "author": "Zt448143356",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf ./dist/node_modules && NODE_ENV=production npx rollup -c"
+    "build": "rollup -c ./rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -27,8 +27,8 @@
   },
   "dependencies": {
     "butterfly-dag": "4.0.0-beta.8",
-    "lodash": "^4.17.20",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -36,12 +36,15 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-babel": "^5.2.2",
+    "less": "^4.1.0",
+    "postcss": "^8.0.0",
     "rollup": "^2.36.1",
+    "rollup-plugin-url": "~3.0.1",
+    "rollup-plugin-img": "^1.0.6",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^5.1.9"
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
