--- a/plugins/panel/example/package.json
+++ b/plugins/panel/example/package.json
@@ -7,7 +7,7 @@
   "author": "Zt448143356",
   "license": "MIT",
   "dependencies": {
-    "butterfly-dag": "4.0.0-beta.8",
+    "butterfly-dag": "^3.0.0",
     "jquery": "^3.4.1",
     "react": "~16.12.0",
     "react-dom": "~16.12.0"
