--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,7 @@
   "author": "jambin",
   "license": "MIT",
   "dependencies": {
+    "@babel/standalone": "^7.14.1",
     "@stackblitz/sdk": "^1.5.2",
     "antd": "~3.26.7",
     "axios": "^0.21.1",
@@ -25,6 +26,7 @@
     "i18next-browser-languagedetector": "^6.0.1",
     "jquery": "^3.4.1",
     "jszip": "^3.6.0",
+    "less": "^3.7.1",
     "react": "~16.12.0",
     "react-ace": "^9.3.0",
     "react-dom": "~16.12.0",
