--- a/vue/example/package.json
+++ b/vue/example/package.json
@@ -8,10 +8,11 @@
   },
   "dependencies": {
     "butterfly-dag": "4.0.0-beta.8",
-    "butterfly-vue": "^0.1.0",
+    "butterfly-vue": "1.0.0-beta.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
