--- a/vue/package.json
+++ b/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butterfly-vue",
-  "version": "1.0.0-beta.6",
+  "version": "1.0.0",
   "description": "vue version for butterfly",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -22,13 +22,11 @@
   },
   "peerDependencies": {
     "butterfly-dag": "*",
-    "lodash": "*",
-    "vue": "^2.6.12"
+    "lodash": "*"
   },
   "dependencies": {
-    "butterfly-dag": "4.0.0-beta.9",
-    "lodash": "^4.17.20",
-    "vue": "^2.6.12"
+    "butterfly-dag": "^4.0.0",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
