--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butterfly-react",
-  "version": "0.0.28-beta",
+  "version": "0.0.29-beta",
   "description": "react version for butterfly",
   "license": "MIT",
   "main": "dist/index.js",
@@ -35,21 +35,20 @@
     "eslint-config-aliyun": "^2.0.3",
     "eslint-plugin-react": "^7.22.0",
     "less": "^4.1.0",
-    "rollup": "^2.38.0"
+    "rollup": "^2.38.0",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.1.0",
+    "postcss": "^8.2.6",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0"
   },
   "files": [
     "dist",
     "doc"
   ],
   "dependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
-    "butterfly-dag": "^3.1.6",
     "debug": "^4.3.1",
     "jquery": "^3.5.1",
-    "lodash": "^4.17.20",
-    "postcss": "^8.2.6",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.0"
+    "lodash": "^4.17.20"
   }
 }
