fix bug and publish 1.0.2

--- a/vue/example/package.json
+++ b/vue/example/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "butterfly-vue": "^1.0.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.0",
     "vue": "^2.6.11",
