--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   },
   "devDependencies": {
     "@babel/core": "~7.14.0",
-    "@babel/plugin-proposal-class-properties": "~7.13.0",
+    "@babel/plugin-proposal-class-properties": "~7.14.0",
     "@babel/plugin-proposal-object-rest-spread": "~7.14.2",
     "@babel/plugin-transform-modules-commonjs": "~7.14.0",
     "@babel/plugin-transform-runtime": "~7.14.2",
     "@babel/preset-env": "~7.13.0",
-    "@babel/preset-react": "~7.13.13",
-    "@babel/register": "~7.13.0",
+    "@babel/preset-react": "~7.14.0",
+    "@babel/register": "~7.14.0",
     "babel-loader": "~8.2.0",
     "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
     "canvas": "^2.6.1",
@@ -33,12 +33,12 @@
     "jquery": "^3.5.1",
     "jsdom": "^16.4.0",
     "less": "~4.1.1",
-    "less-loader": "~9.0.0",
+    "less-loader": "~10.0.1",
     "lodash": "^4.17.20",
-    "mini-css-extract-plugin": "~1.5.1",
-    "mocha": "^8.2.1",
+    "mini-css-extract-plugin": "~2.0.0",
+    "mocha": "~9.0.1",
     "nyc": "^15.1.0",
-    "rollup": "~2.46.0",
+    "rollup": "~2.52.7",
     "rollup-plugin-babel": "~4.4.0",
     "rollup-plugin-commonjs": "~10.1.0",
     "rollup-plugin-extensions": "~0.1.0",
@@ -46,9 +46,9 @@
     "rollup-plugin-peer-deps-external": "~2.2.0",
     "rollup-plugin-postcss": "~4.0.0",
     "rollup-plugin-url": "~3.0.1",
-    "style-loader": "~2.0.0",
+    "style-loader": "~3.0.0",
     "url-loader": "~4.1.0",
-    "webpack": "~5.37.0",
+    "webpack": "~5.42.0",
     "webpack-cli": "~4.6.0"
   },
   "peerDependencies": {
