--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "@babel/register": "~7.14.0",
     "babel-loader": "~8.2.0",
     "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
-    "canvas": "^2.6.1",
+    "canvas": "~2.8.0",
     "css-loader": "~5.2.4",
     "ignore-styles": "^5.0.1",
     "jquery": "^3.5.1",
-    "jsdom": "^16.4.0",
+    "jsdom": "~17.0.0",
     "less": "~4.1.1",
     "less-loader": "~10.0.1",
     "lodash": "^4.17.20",
-    "mini-css-extract-plugin": "~2.0.0",
+    "mini-css-extract-plugin": "~2.2.0",
     "mocha": "~9.0.1",
     "nyc": "^15.1.0",
-    "rollup": "~2.52.7",
+    "rollup": "~2.56.2",
     "rollup-plugin-babel": "~4.4.0",
     "rollup-plugin-commonjs": "~10.1.0",
     "rollup-plugin-extensions": "~0.1.0",
@@ -46,9 +46,9 @@
     "rollup-plugin-peer-deps-external": "~2.2.0",
     "rollup-plugin-postcss": "~4.0.0",
     "rollup-plugin-url": "~3.0.1",
-    "style-loader": "~3.0.0",
+    "style-loader": "~3.2.0",
     "url-loader": "~4.1.0",
-    "webpack": "~5.42.0",
+    "webpack": "~5.50.0",
     "webpack-cli": "~4.6.0"
   },
   "peerDependencies": {
