--- a/vue/example/package.json
+++ b/vue/example/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 9003",
     "build": "vue-cli-service build"
   },
   "dependencies": {
