--- a/vue/package.json
+++ b/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butterfly-vue",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "vue version for butterfly",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -22,8 +22,7 @@
   },
   "peerDependencies": {
     "butterfly-dag": "*",
-    "lodash": "*",
-    "jquery": ">=2.0.0"
+    "lodash": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -32,7 +31,6 @@
     "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-babel": "^5.2.2",
     "butterfly-dag": "^4.0.0",
-    "jquery": "^3.6.0",
     "lodash": "^4.17.20",
     "rollup": "^2.36.1",
     "rollup-plugin-commonjs": "^10.1.0",
