--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butterfly-react",
-  "version": "0.0.37-beta",
+  "version": "1.0.0",
   "description": "react version for butterfly",
   "license": "MIT",
   "main": "dist/index.js",
