--- a/plugins/layout/example/package.json
+++ b/plugins/layout/example/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "dependencies": {
     "react": "~16.12.0",
-    "react-dom": "~16.12.0"
+    "react-dom": "~16.12.0",
+    "jquery": "^3.4.1",
+    "butterfly-plugins-layout": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
