--- a/plugins/layout/package.json
+++ b/plugins/layout/package.json
@@ -20,7 +20,12 @@
   "dependencies": {
     "butterfly-dag": "^4.2.10",
     "jquery": "^3.5.1",
-    "d3-graphviz": "^2.6.1"
+    "classnames": "^2.3.1",
+    "d3-graphviz": "^2.6.1",
+    "d3-selection": "^2.0.0",
+    "d3-shape": "^2.1.0",
+    "kiwi.js": "^1.1.3",
+    "batching-toposort": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
