--- a/plugins/layout/package.json
+++ b/plugins/layout/package.json
@@ -18,7 +18,7 @@
   "author": "sdjalft",
   "license": "MIT",
   "dependencies": {
-    "butterfly-dag": "^4.3.6",
+    "butterfly-dag": "^5.0.0-beta.21",
     "jquery": "^3.5.1",
     "classnames": "^2.3.1",
     "d3-graphviz": "^2.6.1",
